 * Removed the need to add permission check on admin views (now automated)
 * Added cache-control headers to all admin views
 * Added validation to prevent pages being crated with only whitespace characters in their title fields (Frank Wiles)
 * Page model fields without a FieldPanel are no longer displayed in the form
 * No longer need to specify the base model on InlinePanel definitions


0.8.5 (xx.xx.20xx)
~~~~~~~~~~~~~~~~~~

* Fix: On adding a new page, the available page types are ordered by the displayed verbose name
* Fix: Active admin submenus were not properly closed when activating another
* Fix: get_sitemap_urls is now called on the specific page class so it can now be overridden (Jerel Unruh)
* Fix: (Firefox and IE) Fixed preview window hanging and not refocusing when "Preview" button is clicked again
* Fix: Storage backends that return raw ContentFile objects are now handled correctly when resizing images (@georgewhewell)
* Fix: Punctuation characters are no longer stripped when performing search queries
* Fix: When adding tags where there were none before, it is now possible to save a single tag with multiple words in it
* Fix: richtext template tag no longer raises TypeError if None is passed into it (Alejandro Varas)
* Fix: Serving documents now uses a streaming HTTP response and will no longer break Djangos cache middleware

0.8.4 (04.12.2014)
~~~~~~~~~~~~~~~~~~

* Fix: It is no longer possible to have the explorer and settings menu open at the same time
* Fix: Page IDs in page revisions were not updated on page copy, causing subsequent edits to be committed to the original page instead
* Fix: Copying a page now creates a new page revision, ensuring that changes to the title/slug are correctly reflected in the editor (and also ensuring that the user performing the copy is logged)
* Fix: Prevent a race condition when creating Filter objects


0.8.3 (18.11.2014)
~~~~~~~~~~~~~~~~~~
