@@ -1,23 +1,23 @@
-@import "variables.scss";
-@import "mixins.scss";
-@import "grid.scss";
+@import "wagtailadmin/scss/variables.scss";
+@import "wagtailadmin/scss/mixins.scss";
+@import "wagtailadmin/scss/grid.scss";
 
-@import "components/explorer.scss";
-@import "components/icons.scss";
-@import "components/typography.scss";
-@import "components/tabs.scss";
-@import "components/dropdowns.scss";
-@import "components/modals.scss";
-@import "components/forms.scss";
-@import "components/listing.scss";
-@import "components/messages.scss";
-@import "components/formatters.scss";
-@import "components/header.scss";
-@import "components/progressbar.scss";
-@import "components/datetimepicker.scss";
-@import "components/main-nav.scss";
+@import "wagtailadmin/scss/components/explorer.scss";
+@import "wagtailadmin/scss/components/icons.scss";
+@import "wagtailadmin/scss/components/typography.scss";
+@import "wagtailadmin/scss/components/tabs.scss";
+@import "wagtailadmin/scss/components/dropdowns.scss";
+@import "wagtailadmin/scss/components/modals.scss";
+@import "wagtailadmin/scss/components/forms.scss";
+@import "wagtailadmin/scss/components/listing.scss";
+@import "wagtailadmin/scss/components/messages.scss";
+@import "wagtailadmin/scss/components/formatters.scss";
+@import "wagtailadmin/scss/components/header.scss";
+@import "wagtailadmin/scss/components/progressbar.scss";
+@import "wagtailadmin/scss/components/datetimepicker.scss";
+@import "wagtailadmin/scss/components/main-nav.scss";
 
-@import "fonts.scss";
+@import "wagtailadmin/scss/fonts.scss";
 
 html{
     background:$color-grey-4;
