@@ -1,5 +1,5 @@
-@import "../variables.scss";
-@import "../mixins.scss";
+@import "wagtailadmin/scss/variables.scss";
+@import "wagtailadmin/scss/mixins.scss";
 
 .hallotoolbar{
     position:absolute;
