@@ -1,9 +1,9 @@
-@import "variables.scss";
-@import "mixins.scss";
+@import "wagtailadmin/scss/variables.scss";
+@import "wagtailadmin/scss/mixins.scss";
 
-@import "components/icons.scss";
+@import "wagtailadmin/scss/components/icons.scss";
 
-@import "fonts.scss";
+@import "wagtailadmin/scss/fonts.scss";
 
 html, body{
     background-color:transparent;
